<resources>
    <string name="app_name">Attendance System</string>
    <string name="subscription_key">50cfcfdd3092414d8b975986412c7f97</string>
    <string name="endpoint">https://centralindia.api.cognitive.microsoft.com/face/v1.0</string>

    <string name="pick_image_intent_text">Tell the class to say CHEESE (max 10 people)</string>
    <string name="pick_image_intent_text_student">Take a photo of the student\'s face</string>

    <string name="import_csv_steps">
        1) Type the Student Name and Registration Number row wise on excel. Save the file in .csv format with name StudentFaces.\n2) Save all the face images in .jpg format with their name as the student\'s registration number. Eg \"1522009.jpg\".\n3) Put all the face images in a folder called CSVImages. \n4) Put the CSVImages folder and StudentFaces.csv file inside storage/emulated/0 \n
    </string>

    <!-- Main activity -->
    <string name="login_txt">please sign in to continue</string>


    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key with its corresponding endpoint to source file \"app/res/values/strings.xml\" to enable Face API calls.</string>

    <string name="detection">Detection</string>
    <string name="face_verification">Face to Face Verification</string>
    <string name="person_verification">Face to Person Verification</string>
    <string name="verification">Verification</string>
    <string name="identification">Identification</string>
    <string name="grouping">Grouping</string>
    <string name="find_similar_faces">Find Similar Faces</string>
    <string name="detection_description">Detect faces, face landmarks, pose, smile, glasses, gender, and age.</string>
    <string name="verification_description">Authentication between two faces or between a face and a person.</string>
    <string name="grouping_description">Group faces based on similarity.</string>
    <string name="find_similar_face_description">Search for similar-looking faces.</string>
    <string name="identification_description">Identify the person from a face.</string>

    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Result:</string>
    <string name="detect">Detect</string>

    <!-- Verification activity -->
    <string name="verify">Verify</string>
    <string name="face_0">Face0:</string>
    <string name="face_1">Face1:</string>
    <string name="manage_persons">Manage\nPersons</string>
    <string name="verification_menu">Verification\nMenu</string>

    <!-- Verification activity -->
    <string name="face">Face:</string>
    <string name="group">Group</string>

    <!-- Identification activity -->
    <string name="identify">Identify</string>
    <string name="manage_person_groups">Manage\nPerson\nGroups</string>
    <string name="person_groups">Person Groups</string>
    <string name="target_image">Target image</string>
    <string name="faces">Faces in image</string>

    <!-- Person group management activities -->
    <string name="delete">Delete</string>
    <string name="done_and_save">Save</string>

    <string name="person_group_list">Person Group List</string>
    <string name="person_group_list_tip">- Tap on a group to edit.\n- Long tap to delete.</string>
    <string name="add_person_group">Add Person Group</string>

    <string name="person_group">Person Group</string>
    <string name="person_group_tip">- Tap on a person to edit.\n- Long press to delete.</string>
    <string name="person_group_name">Person group name:</string>
    <string name="type_in_person_group_name_tip">Name (within 30 characters)</string>
    <string name="add_person">Add Person</string>

    <string name="person">Person</string>
    <string name="persons">Persons</string>
    <string name="person_tip">- Long press on a face to delete.</string>
    <string name="type_in_person_name_tip">Name (within 30 characters)</string>
    <string name="add_face">Add Face</string>
    <string name="person_name">Person name:</string>
    <string name="add_face_to_person">Add Faces To Person</string>
    <string name="select_face_tip">Select this person\'s faces (if exist) by click on the checkbox.</string>

    <!-- Find similar faces and grouping activity -->
    <string name="zero_face">Face list: 0 faces in total</string>
    <string name="target_face">Target face:</string>
    <string name="all_faces">All Faces:</string>
    <string name="add_faces">Add\nFaces</string>
    <string name="similar_person_description">Finding matchPerson people...</string>
    <string name="similar_face_description">Finding matchFace faces...</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="view_log">View Log</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>

    <!-- Logs -->
    <string name="log">Log:</string>
    <string name="detection_log">Detection Log</string>
    <string name="verification_log">Verification Log</string>
    <string name="find_similar_face_log">Find Similar Face Log</string>
    <string name="grouping_log">Grouping Log</string>
    <string name="identification_log">Identification Log</string>

    <!-- Warning messages -->
    <string name="person_name_empty_warning_message">Person name cannot be empty</string>
    <string name="no_face_to_group">No faces to group</string>
    <string name="no_person_group_selected_for_identification_warning">No person group selected</string>
    <string name="face_cannot_be_identified">Unknown person</string>
    <string name="user_provided_person_name">Person name</string>
    <string name="user_provided_description_data">User data</string>
    <string name="user_provided_person_group_name">Person group name</string>
    <string name="user_provided_person_group_description_data">User data</string>
    <string name="title_activity_imports_students_csv">ImportsStudentsCSV</string>


    <string name="already_account"><![CDATA[Already have an account? <b>Sign In!</b>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login Class Account</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="create_account">Create Class Account</string>
    <string name="signup_txt">Please fill in correct details</string>
    <string name="name">Username</string>
    <string name="renterPassword">Confirm Password</string>
    <string name="sectionClass">Class &amp; Section</string>
    <string name="year">Year</string>
    <string name="signup">Sign Up</string>
    <string name="noOfStudents">No. of students</string>
    <string name="students">Students List</string>
    <string name="create_subject">Create Subject</string>
    <string name="course_id">Course Id</string>
    <string name="course_name">Course name</string>
    <string name="staff_name">Staff Name</string>
    <string name="total_classes">Total Classes</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="next">next</string>
    <string name="attendancePresent">Present</string>
    <string name="loading">Loading...</string>

</resources>