<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_subject_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/popup_bg"
            android:fontFamily="@font/himalaya"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/create_subject"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_course_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/create_subject_tv"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/course_id"
            android:inputType="text"
            android:textColorHint="#707070"
            android:textStyle="normal|italic" />

        <EditText
            android:id="@+id/et_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_course_id"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/course_name"
            android:inputType="text"
            android:textColorHint="#707070"
            android:textStyle="normal|italic" />

        <EditText
            android:id="@+id/et_staff_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_course_name"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/staff_name"
            android:inputType="textPersonName"
            android:textColorHint="#707070"
            android:textStyle="normal|italic" />

        <EditText
            android:id="@+id/et_total_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_staff_name"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/total_classes"
            android:inputType="text|number"
            android:textColorHint="#707070"
            android:textStyle="normal|italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_subject_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_total_classes"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/white"
            android:text=   "@string/done_and_save" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>